k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: ghcr.io/smiil3/mds-mdp-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args:
            - |
              cat > /usr/share/nginx/html/env.js <<EOF
              window.__ENV__ = {
                EXPO_PUBLIC_API_URL: "${EXPO_PUBLIC_API_URL}"
              };
              EOF
              nginx -g 'daemon off;'
